// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ContentPackSelection /> should render with empty content pack 1`] = `
<div>
  <div
    className="row"
  >
    <div
      className="col-lg-8 col-sm-offset-1"
    >
      <h2>
        General Information
      </h2>
      <br />
      <form
        className="content-selection-form"
        id="content-selection-form"
        onSubmit={[Function]}
      >
        <fieldset>
          <div
            className="form-group"
          >
            <label
              className="control-label"
              htmlFor="name"
            >
              Name
            </label>
            <span>
              <input
                className="form-control"
                id="name"
                label="Name"
                maxLength={250}
                name="name"
                onChange={[Function]}
                placeholder=""
                required={true}
                type="text"
              />
              <span
                className="help-block"
              >
                Required. Give a descriptive name for this content pack.
              </span>
            </span>
          </div>
          <div
            className="form-group"
          >
            <label
              className="control-label"
              htmlFor="summary"
            >
              Summary
            </label>
            <span>
              <input
                className="form-control"
                id="summary"
                label="Summary"
                maxLength={250}
                name="summary"
                onChange={[Function]}
                placeholder=""
                required={true}
                type="text"
              />
              <span
                className="help-block"
              >
                Required. Give a short summary of the content pack.
              </span>
            </span>
          </div>
          <div
            className="form-group"
          >
            <label
              className="control-label"
              htmlFor="description"
            >
              Description
            </label>
            <span>
              <textarea
                className="form-control"
                id="description"
                label="Description"
                name="description"
                onChange={[Function]}
                placeholder=""
                rows={6}
                type="textarea"
              />
              <span
                className="help-block"
              >
                Give a long description of the content pack in markdown.
              </span>
            </span>
          </div>
          <div
            className="form-group"
          >
            <label
              className="control-label"
              htmlFor="vendor"
            >
              Vendor
            </label>
            <span>
              <input
                className="form-control"
                id="vendor"
                label="Vendor"
                maxLength={250}
                name="vendor"
                onChange={[Function]}
                placeholder=""
                required={true}
                type="text"
              />
              <span
                className="help-block"
              >
                Required. Who did this content pack and how can he be reached. e.g Name and eMail
              </span>
            </span>
          </div>
          <div
            className="form-group"
          >
            <label
              className="control-label"
              htmlFor="url"
            >
              URL
            </label>
            <span>
              <input
                className="form-control"
                id="url"
                label="URL"
                maxLength={250}
                name="url"
                onChange={[Function]}
                placeholder=""
                type="text"
              />
              <span
                className="help-block"
              >
                Where can I find the content pack. e.g. github url
              </span>
            </span>
          </div>
        </fieldset>
      </form>
    </div>
  </div>
  <div
    className="row"
  >
    <div
      className="col-sm-offset-1"
    >
      <h2>
        Content Pack selection
      </h2>
    </div>
  </div>
  <div
    className="row"
  >
    <div
      className="col-sm-offset-1"
    >
      <div
        className="search"
        style={
          Object {
            "marginTop": 15,
          }
        }
      >
        <form
          className="form-inline"
          onSubmit={[Function]}
        >
          <div
            className="form-group has-feedback"
          >
            <input
              autoComplete="off"
              className="query form-control"
              id="common-search-form-query-input"
              onChange={[Function]}
              placeholder="Enter search query..."
              spellCheck="false"
              style={
                Object {
                  "width": "auto",
                }
              }
              type="text"
              value=""
            />
          </div>
          <div
            className="form-group"
            style={
              Object {
                "marginLeft": 5,
              }
            }
          >
            <button
              className="submit-button btn btn-default"
              disabled={false}
              type="submit"
            >
              Filter
            </button>
          </div>
          <div
            className="form-group"
            style={
              Object {
                "marginLeft": 5,
              }
            }
          >
            <button
              className="reset-button btn btn-default"
              disabled={false}
              onClick={[Function]}
              type="reset"
            >
              Reset
            </button>
          </div>
        </form>
      </div>
    </div>
  </div>
  <div
    className="row"
  >
    <div
      className="col-sm-8 col-sm-offset-1"
    >
      <ul
        className="list"
      />
    </div>
  </div>
</div>
`;

exports[`<ContentPackSelection /> should render with filled content pack 1`] = `
<div>
  <div
    className="row"
  >
    <div
      className="col-lg-8 col-sm-offset-1"
    >
      <h2>
        General Information
      </h2>
      <br />
      <form
        className="content-selection-form"
        id="content-selection-form"
        onSubmit={[Function]}
      >
        <fieldset>
          <div
            className="form-group"
          >
            <label
              className="control-label"
              htmlFor="name"
            >
              Name
            </label>
            <span>
              <input
                className="form-control"
                id="name"
                label="Name"
                maxLength={250}
                name="name"
                onChange={[Function]}
                placeholder=""
                required={true}
                type="text"
                value="name"
              />
              <span
                className="help-block"
              >
                Required. Give a descriptive name for this content pack.
              </span>
            </span>
          </div>
          <div
            className="form-group"
          >
            <label
              className="control-label"
              htmlFor="summary"
            >
              Summary
            </label>
            <span>
              <input
                className="form-control"
                id="summary"
                label="Summary"
                maxLength={250}
                name="summary"
                onChange={[Function]}
                placeholder=""
                required={true}
                type="text"
                value="summmary"
              />
              <span
                className="help-block"
              >
                Required. Give a short summary of the content pack.
              </span>
            </span>
          </div>
          <div
            className="form-group"
          >
            <label
              className="control-label"
              htmlFor="description"
            >
              Description
            </label>
            <span>
              <textarea
                className="form-control"
                id="description"
                label="Description"
                name="description"
                onChange={[Function]}
                placeholder=""
                rows={6}
                type="textarea"
                value="descr"
              />
              <span
                className="help-block"
              >
                Give a long description of the content pack in markdown.
              </span>
            </span>
          </div>
          <div
            className="form-group"
          >
            <label
              className="control-label"
              htmlFor="vendor"
            >
              Vendor
            </label>
            <span>
              <input
                className="form-control"
                id="vendor"
                label="Vendor"
                maxLength={250}
                name="vendor"
                onChange={[Function]}
                placeholder=""
                required={true}
                type="text"
                value="vendor"
              />
              <span
                className="help-block"
              >
                Required. Who did this content pack and how can he be reached. e.g Name and eMail
              </span>
            </span>
          </div>
          <div
            className="form-group"
          >
            <label
              className="control-label"
              htmlFor="url"
            >
              URL
            </label>
            <span>
              <input
                className="form-control"
                id="url"
                label="URL"
                maxLength={250}
                name="url"
                onChange={[Function]}
                placeholder=""
                type="text"
                value="http://example.com"
              />
              <span
                className="help-block"
              >
                Where can I find the content pack. e.g. github url
              </span>
            </span>
          </div>
        </fieldset>
      </form>
    </div>
  </div>
  <div
    className="row"
  >
    <div
      className="col-sm-offset-1"
    >
      <h2>
        Content Pack selection
      </h2>
    </div>
  </div>
  <div
    className="row"
  >
    <div
      className="col-sm-offset-1"
    >
      <div
        className="search"
        style={
          Object {
            "marginTop": 15,
          }
        }
      >
        <form
          className="form-inline"
          onSubmit={[Function]}
        >
          <div
            className="form-group has-feedback"
          >
            <input
              autoComplete="off"
              className="query form-control"
              id="common-search-form-query-input"
              onChange={[Function]}
              placeholder="Enter search query..."
              spellCheck="false"
              style={
                Object {
                  "width": "auto",
                }
              }
              type="text"
              value=""
            />
          </div>
          <div
            className="form-group"
            style={
              Object {
                "marginLeft": 5,
              }
            }
          >
            <button
              className="submit-button btn btn-default"
              disabled={false}
              type="submit"
            >
              Filter
            </button>
          </div>
          <div
            className="form-group"
            style={
              Object {
                "marginLeft": 5,
              }
            }
          >
            <button
              className="reset-button btn btn-default"
              disabled={false}
              onClick={[Function]}
              type="reset"
            >
              Reset
            </button>
          </div>
        </form>
      </div>
    </div>
  </div>
  <div
    className="row"
  >
    <div
      className="col-sm-8 col-sm-offset-1"
    >
      <ul
        className="list"
      >
        <li
          className="listItem"
        >
          <div
            className="listItemContainer"
          >
            <label
              className="checkbox-inline"
              title=""
            >
              <input
                checked={false}
                disabled={false}
                onChange={[Function]}
                type="checkbox"
              />
            </label>
            <div
              className="expandBoxContainer"
            >
              <div
                className="fa-stack expandBox"
                onClick={[Function]}
                role="button"
                tabIndex={0}
              >
                <i
                  className="fa fa-circle-thin fa-stack-1x iconBackground"
                />
                <i
                  className="fa fa-stack-1x fa-angle-up"
                />
              </div>
            </div>
            <span
              className="header"
            >
              Spaceship
            </span>
          </div>
          <div
            className="expandableContent"
          />
        </li>
      </ul>
    </div>
  </div>
</div>
`;
